- upgrade Gatsby, tailwindcss - name and describe project - configure tailwindcss - create header, footer comps - create players page - setup common tailwind class - adjust layout

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .styled-link {
+    @apply text-9jaGreen hocus:underline hocus:decoration-9jaGreen;
+  }
+}
